# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("jsoncpp_config") {
  include_dirs = [
    "../../jsoncpp/source/include",
    "../../jsoncpp/generated",
  ]


}

source_set("jsoncpp") {
  sources = [
    "../../jsoncpp/generated/version.h",
    "../../jsoncpp/source/include/json/assertions.h",
    "../../jsoncpp/source/include/json/autolink.h",
    "../../jsoncpp/source/include/json/config.h",
    "../../jsoncpp/source/include/json/features.h",
    "../../jsoncpp/source/include/json/forwards.h",
    "../../jsoncpp/source/include/json/json.h",
    "../../jsoncpp/source/include/json/reader.h",
    "../../jsoncpp/source/include/json/value.h",
    "../../jsoncpp/source/include/json/writer.h",
    "../../jsoncpp/source/src/lib_json/json_reader.cpp",
    "../../jsoncpp/source/src/lib_json/json_tool.h",
    "../../jsoncpp/source/src/lib_json/json_value.cpp",
    "../../jsoncpp/source/src/lib_json/json_writer.cpp",
  ]

  public_configs = [ ":jsoncpp_config" ]

  defines = [
    "JSON_USE_EXCEPTION=0",
    "JSON_USE_NULLREF=0",
  ]

  include_dirs = [ "../../jsoncpp/source/src/lib_json" ]

}


